--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0"]
+openai = ["openai>=1.0.0"]
 
 [tool.setuptools.packages.find]
 where = ["."]
