--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "transformers<5",
     "openai>=1.0.0",
     "tqdm>=4.66.0",
+    "z3-solver>=4.12.0",
 ]
 
 [project.optional-dependencies]
