--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "openai>=1.0.0",
     "tqdm>=4.66.0",
     "z3-solver>=4.12.0",
+    # John's fork
+    "grakel @ git+https://github.com/JohnLyu2/GraKeL.git@f142b6e394700301cebb420e06db91a019f88aba",
 ]
 
 [project.optional-dependencies]
