--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "smt-as-llm"
+name = "smt-select"
 version = "0.1.0"
-description = "SMT Algorithm Selection using LLM"
+description = ""
 requires-python = ">=3.10"
 dependencies = [
     "numpy>=1.21.0",
